<resources>
    <string name="app_name">BUddy</string>
    <string name="facebook_app_id">1658751394414922</string>
    <string name="title">Event Title</string>
    <string name="numberpeople">Number of People</string>
    <string name="location">Location </string>
    <string name="category">Category </string>
    <string name="detail">Details </string>
    <string name="create">Create </string>
    <string name="cancel">Cancel </string>
    <string name="postBy">Post By</string>
    <string name="date">Date</string>
    <string name="createby">Created By </string>
    <string name="message">Message</string>
    <string name="join">Join </string>
    <string name="filter"> Filter </string>
    <string name="email"> Email: </string>
    <string name="password"> Password: </string>
    <string name="login"> Log In </string>
    <string name="loginother"> Log in through other source: </string>
    <string name="loginBU"> BU Login </string>
    <string name="upAct"> Upcoming Activities </string>
    <string name="pastAct"> Past Activities </string>
    <string name="yourAct"> Your Activities </string>
    <string name="home"> Home </string>
    <string name="save"> Save </string>
    <string name="search"> Search </string>
    <string name="loginkerberos">Log in with Kerberos</string>
    <string name="errorNotBU">Please log in with your BU email</string>
    <string name="unknownSignInError">An error occurred on log in. Please try again.</string>
    <string name="noFacebook">Facebook user not recognized. Please log in with your Kerberos account and enable Facebook login</string>
    <string name="where"> Where? </string>
    <string name="clear_filters">Clear Filters</string>
    <string name="choose_time">Choose Time</string>
    <string name="choose_date">Choose Date</string>

    <string name="time">Time</string>

    <string name="food">Food</string>
    <string name="sports">Sports</string>
    <string name="study">Study Break</string>
    <string name="movie">Movie</string>
    <string name="explore">Exploring</string>
    <string name="other">Others</string>
    <string name="refresh">Refresh results</string>
    <string name="liked_this">You liked this</string>

    <string name="question_about_event">Question about event on BUddy</string>
    <string name="unable_to_find_texting_activity">Unable to find texting activity</string>
    <string name="unable_to_find_creator_number">Cannot find number to message</string>
    <string name="canceling_event">Canceling event</string>

    <string name="beat_to_it">Oops, someone beat you to it!</string>

    <string name="left_event">You have left the event </string>
    <string name="joined_event">You have joined the event </string>
    <string name="liked_event">You have liked the event </string>
    <string name="unliked_event">You have unliked the event </string>

    <string name="cancel_event">Cancel event</string>
    <string name="event_full">Sorry, this event is full</string>
    <string name="no_phone_number">No phone number available</string>

    <string name="leave_event">Leave event</string>
    <string name="join_event">Join event</string>
    <string name="like_event">Like event</string>
    <string name="unlike_event">Unlike event</string>
    <string name="event_passed">This event has passed</string>

    <string name="no_results_found">No results found</string>
    <string name="set_likes">Likes: %1$d</string>


</resources>

