<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:background="@drawable/gray_background"
    android:paddingRight="17dp"
    android:paddingTop="5dp"
    android:paddingLeft="17dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3">

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/ibtnProfile"
            android:scaleType="fitXY"
            android:src="@drawable/ic_person_black_24dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_weight="0.05" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.9"></LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_weight="0.05">

            <Button
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/filter"
                android:id="@+id/btnFilter"
                android:layout_weight="1" />

            <Button
                android:text="@string/clear_filters"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:id="@+id/btnClearFilters"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="35dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Event"
            android:id="@+id/titleEvent"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:textSize="20sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Date"
            android:id="@+id/titleDate"
            android:textColor="@android:color/black"
            android:layout_weight="4.5"
            android:textSize="20sp"/>
    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="179dp"
        android:id="@+id/lvActivities"
        android:layout_weight="0.92"
        android:divider="@android:color/black"
        android:dividerHeight="2.0sp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/btnCreatePost"
        android:layout_gravity="bottom" />

    <Button
        android:text="@string/refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnRefresh" />

</LinearLayout>