<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="17dp"
    android:paddingTop="5dp"
    android:paddingLeft="17dp"
    android:paddingBottom="5dp"
    android:orientation="vertical"
    android:background="@drawable/gray_background"
    tools:context="com.example.link.android.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="156dp"
                android:layout_height="match_parent"
                android:layout_below="@+id/tvDate"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_person_black_24dp"
                android:layout_marginTop="0dp"
                android:id="@+id/imageView"
                android:layout_gravity="center"
                android:layout_weight="0.25" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:text="Name: "
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="bottom"
                        android:id="@+id/tvNameShow"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:layout_weight="1" />

                    <EditText
                        android:layout_width="144dp"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:textColor="@android:color/black"
                        android:ems="10"
                        android:id="@+id/etName"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:text="Phone: "
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="bottom"
                        android:id="@+id/tvPhoneNumShow"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:layout_weight="1" />

                    <EditText
                        android:layout_width="141dp"
                        android:textColor="@android:color/black"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:ems="10"
                        android:id="@+id/etPhoneNum"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:text="Email: "
                        android:layout_width="wrap_content"
                        android:gravity="bottom"
                        android:layout_height="match_parent"
                        android:id="@+id/tvEmailShow"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:layout_weight="1" />

                    <EditText
                        android:layout_width="140dp"
                        android:textColor="@android:color/black"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:id="@+id/etEmail"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:text="Birth Date: "
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id="@+id/tvDoBShow"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"
                        android:gravity="bottom"
                        android:layout_weight="1" />

                    <EditText
                        android:layout_width="144dp"
                        android:textColor="@android:color/black"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:ems="10"
                        android:id="@+id/etDoB"
                        android:layout_weight="0.8" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4">

            <TextView
                android:text="Likes: 4"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/tvLikes"
                android:gravity="left|center"
                android:layout_weight="1" />

            <Button
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:gravity="center"
                android:id="@+id/btnSave"
                android:layout_weight="0.1" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5">

        <TextView
            android:text="@string/upAct"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:id="@+id/tvUpAct"
            android:textStyle="normal|bold"
            android:textSize="18sp" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:id="@+id/lvUpAct" />

        <TextView
            android:text="@string/pastAct"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:id="@+id/tvPstAct"
            android:textStyle="normal|bold"
            android:textSize="18sp" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:id="@+id/lvPstAct" />

        <TextView
            android:text="@string/yourAct"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center"
            android:id="@+id/tvYourAct"
            android:textStyle="normal|bold"
            android:textSize="18sp" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:id="@+id/lvYourAct" />

    </LinearLayout>

</LinearLayout>
